   it and then dropping it on zuluMount-gui main window.
-- add ablity to create TrueCrypt volumes using a passphrase together with one or more keyfiles.Previous versions allowed
   creation of volumes using either a passphrase or a single keyfile.
-- add support for opening of VeraCrypt volumes(cryptsetup > 1.6.6 required).

version 4.7.6
-- add "hmac" plugin.This plugin produces a key as follows: key = hmac-sha256( passphrase,keyfile-contents ).
   this plugin can be used when unlocking a volume requires a passphrase and a keyfile.
-- use "tcrypt" to refer to TrueCrypt volumes and "vcrypt" to refer to VeraCrypt volumes.
-- add ability to create VeraCrypt volumes.

version 4.7.7
-- add support for creating and opening VeraCrypt volumes that use dynamic mode.
-- make zuluCrypt-gui window and zuluMount-gui window resizable with the new sizes surviving restarts.

version 4.7.8
-- add support for usage of keys that are made up by a combination of a passphrase and a keyfile."hmac" plugin
   should be used to unlock volumes generated by this combination.
-- fix problems caused by updated versions of certain utilities we rely on.

version 4.8.0
-- fix bug,private mount points were not created with proper permissions.

version 4.9.0
-- add support for unlocking cryfs(https://www.cryfs.org/) encrypted volumes in zuluMount.
-- various fixes and improvements

version 5.0.0
-- add support for creating LUKS volumes that only uses a detached header.The detached header will be created in the
   user home directory and the volume can not be unlocked without this detached header.The detached header can be
   reattached later on through zuluCrypt-gui->menu->Volumes->Restore Volume Header.
-- its now possible to create a shared mount point when unlocking a volume in zuluCrypt-gui
-- its now possible to unlock VeraCrypt volumes from favorite feature in zuluCrypt-gui