@@ -237,3 +237,4 @@ version 5.0.0
    reattached later on through zuluCrypt-gui->menu->Volumes->Restore Volume Header.
 -- its now possible to create a shared mount point when unlocking a volume in zuluCrypt-gui
 -- its now possible to unlock VeraCrypt volumes from favorite feature in zuluCrypt-gui
+-- add complete French translation to both zuluCrypt-gui and zuluMount-gui
